# volatile-membench

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Requirements.txt
.github/: copilot-instructions.md
cmake/: DetectArch.cmake  DetectGPU.cmake  DetectPlatform.cmake
docs/: BUILD_GUIDE.md  BUILD_TROUBLESHOOTING.md  KEY_LEARNINGS.md  RESULTS.md  RESULTS_M1.md  USER_GUIDE.md  _config.yml  index.md
docs/_layouts/: default.html
include/membench/: alloc.h  arch_arm.h  arch_x86.h  bench_cpu.h  bench_gpu.h  cli.h  output.h  platform.h  sysinfo.h  timer.h
scripts/: setup.ps1  setup.sh
src/: CMakeLists.txt  main.c
src/core/: alloc.c  cli.c  cli_interactive.c  output.c  sysinfo.c  timer.c
src/cpu/: bandwidth.c  cache_detect.c  latency.c
src/gpu/: gpu_cuda.cu  gpu_stub.c
tests/: CMakeLists.txt  test_alloc.c  test_sysinfo.c  test_timer.c
